project-14-azure-cloud-infrastructure-platform/terraform/main.tf
resource "azurerm_resource_group" "main" {

  name     = var.resource_group_name

  location = var.location
}

resource "azurerm_virtual_network" "main" {

  name                = "enterprise-vnet"

  address_space       = ["10.0.0.0/16"]

  location            = azurerm_resource_group.main.location

  resource_group_name = azurerm_resource_group.main.name
}

resource "azurerm_subnet" "main" {

  name                 = "application-subnet"

  resource_group_name  = azurerm_resource_group.main.name

  virtual_network_name = azurerm_virtual_network.main.name

  address_prefixes     = ["10.0.1.0/24"]
}
