project-14-azure-cloud-infrastructure-platform/terraform/network-security-group.tf
resource "azurerm_network_security_group" "main" {

  name                = "enterprise-nsg"

  location            = azurerm_resource_group.main.location

  resource_group_name = azurerm_resource_group.main.name

  security_rule {

    name                       = "AllowSSH"

    priority                   = 100

    direction                  = "Inbound"

    access                     = "Allow"

    protocol                   = "Tcp"

    source_port_range          = "*"

    destination_port_range     = "22"

    source_address_prefix      = "*"

    destination_address_prefix = "*"
  }

  security_rule {

    name                       = "AllowHTTP"

    priority                   = 110

    direction                  = "Inbound"

    access                     = "Allow"

    protocol                   = "Tcp"

    source_port_range          = "*"

    destination_port_range     = "80"

    source_address_prefix      = "*"

    destination_address_prefix = "*"
  }
}
